crud news implemented and swagger updated
